[package]
name = "nozomi-cproxy"
version = "0.1.0"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
anyhow = "1"
tracing-subscriber = "0.2"
human-panic = "1.0"
structopt = "0.3"
cmd_lib = "0.10"
ctrlc = "3.1"