[package]
name = "cproxy"
version = "4.0.0"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
description = "Transparent proxy built on cgroup net_cls."
homepage = "https://github.com/NOBLES5E/cproxy"
license = "AGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
anyhow = "1"
tracing-subscriber = "0.2"
structopt = "0.3"
cmd_lib = "0.11"
ctrlc = "3.1"
cgroups-rs = "0.2"
nix = "0.20"