[package]
name = "cproxy"
version = "4.1.6"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
description = "Transparent proxy built on cgroup net_cls."
homepage = "https://github.com/NOBLES5E/cproxy"
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
cgroups-rs = "0.3"
cmd_lib = "1.9"
color-eyre = "0.6"
ctrlc = "3.4"
eyre = "0.6"
flume = "0.11"
nix = "0.26"
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
with_drop = "0.0.3"